🐛 fix alignment

--- a/src/components/app/projects/Projects.module.css
+++ b/src/components/app/projects/Projects.module.css
@@ -5,9 +5,3 @@
 
   grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
 }
-
-@media (min-width: 1024px) {
-  .section {
-    padding-top: 5rem;
-  }
-}
