--- a/src/components/utility/project-card/ProjectCard.module.css
+++ b/src/components/utility/project-card/ProjectCard.module.css
@@ -1,7 +1,7 @@
 .card {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  display: grid;
+  grid-template-rows: auto auto 1fr;
+  gap: 0.5rem;
   overflow: hidden;
 }
 
